--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/penguinlogo.svg">
+    <meta name="author" content="Alejandra Mella B">
+    <meta name="description" content="Tienda online de productos artesanales">
+    <meta name="Keywords" content="Aros, Arcilla, productos, shop, artesanía, hecho a mano">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Nothing+You+Could+Do&family=Noto+Sans:wght@100&display=swap" rel="stylesheet">
-    <title>Market Place</title>
+    <title>Estudio Pingüino</title>
   </head>
   <body>
     <div id="root"></div>
