--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/penguinlogo.svg">
+    <link rel="icon" type="image/svg+xml" href="/penguinlogo.svg">
     <meta name="author" content="Alejandra Mella B">
     <meta name="description" content="Tienda online de productos artesanales">
     <meta name="Keywords" content="Aros, Arcilla, productos, shop, artesanía, hecho a mano">
